Navigation bar markup and basic CSS
Added navigation bar with different player positions, and CSS.

--- a/animated_gallery/index.html
+++ b/animated_gallery/index.html
@@ -8,7 +8,17 @@
   <body>
     <header>
       <div class="container">
-        <nav id="navbar"></nav>
+        <nav id="navbar">
+          <a href="#">Ravens Offense</a>
+          <a href="#">Quarterbacks</a>
+          <a href="#">Wide Receivers</a>
+          <a href="#">Running Backs</a>
+          <a href="#">Guards</a>
+          <a href="#">Offensive Tackles</a>
+          <a href="#">Tight Ends</a>
+          <a href="#">Fullbacks</a>
+          <a href="#">Centers</a>
+        </nav>
       </div><!--Container-->
     </header>
 
