--- a/animated_gallery/index.html
+++ b/animated_gallery/index.html
@@ -77,5 +77,12 @@
         </div><!--Container-->
       </footer>
     </section>
+
+    <!--Include JQuery-->
+    <script src="js/jquery-3.1.1.js"></script>
+    <!--Include Quicksand plugin-->
+    <script src="js/jquery.quicksand.js"></script>
+    <!--Include Custom JS-->
+    <script src="js/script.js"></script>
   </body>
 </html>
